# reasonable-codemod

./: README.md  azure-pipelines.yml  dune-project  package.json
.ci/: build-platform.yml  cross-release.yml
.ci/utils/: create-docs.yml  publish-build-cache.yml  restore-build-cache.yml
esy.lock/: index.json
lib/: Codemod.re  Migrate.re  dune
output/test/: bsconfig.json  package.json
test/__snapshots__/: should_transform_correctly.0b0b4c61.0.snapshot  should_transform_correctly.12f8c488.0.snapshot  should_transform_correctly.12f8c488.1.snapshot  should_transform_correctly.14c5138b.0.snapshot  should_transform_correctly.14c5138b.1.snapshot  should_transform_correctly.1dd8d71b.0.snapshot  should_transform_correctly.4ab44b8d.0.snapshot  should_transform_correctly.4ab44b8d.1.snapshot  should_transform_correctly.502a9429.0.snapshot  should_transform_correctly.65568b0f.0.snapshot  should_transform_correctly.6f7b25c6.0.snapshot  should_transform_correctly.6f7b25c6.1.snapshot  should_transform_correctly.786d4d57.0.snapshot  should_transform_correctly.786d4d57.1.snapshot  should_transform_correctly.7e13cf67.0.snapshot  should_transform_correctly.7e13cf67.1.snapshot  should_transform_correctly.9df87bb5.0.snapshot  should_transform_correctly.9df87bb5.1.snapshot  should_transform_correctly.a91d3187.0.snapshot  should_transform_correctly.a91d3187.1.snapshot  should_transform_correctly.aa5711e4.0.snapshot  should_transform_correctly.aa5711e4.1.snapshot  should_transform_correctly.ab8c6511.0.snapshot  should_transform_correctly.ab8c6511.1.snapshot  should_transform_correctly.aebc0557.0.snapshot  should_transform_correctly.aebc0557.1.snapshot  should_transform_correctly.c43c5f1c.0.snapshot  (+2 more)
test/lib/: RunTests.re  TestFramework.re  UpgradeTests.re  dune
(+116 files in other folders)
