;; dune file
(library
   (name MyLibTest)
   (public_name bloodyowl-upgrade-reason-react-tests.lib)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   (flags (-w -3-9))
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries rely.lib console.lib lib)
   (modules (:standard \ RunTests))
)
(executable
  ; the for the library is automatically detected because of the name, but we
  ; need to explicitly specify the package here
  (package bloodyowl-upgrade-reason-react-tests)
  (name RunTests)
  (public_name RunTests.exe)
  (libraries
    bloodyowl-upgrade-reason-react-tests.lib
  )
  (modules RunTests)
)
